// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Locale switcher component renders English index switcher correctly 1`] = `
<div>
  <a
    class="sc-dlnjwi buEYDr"
    href="/"
  >
    <span
      class="sc-bdnxRM sc-gtsrHT fyhPxc trVZf"
    >
      Suomeksi
    </span>
  </a>
  <br />
  ,
</div>
`;

exports[`Locale switcher component renders Finnish index switcher correctly 1`] = `
<div>
  <a
    class="sc-dlnjwi buEYDr"
    href="/en"
  >
    <span
      class="sc-bdnxRM sc-gtsrHT fyhPxc trVZf"
    >
      In English
    </span>
  </a>
  <br />
  ,
</div>
`;
